--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio | Davi</title>
-    <link rel="stylesheet" href="/css/index.css">
-    <link rel="icon" href="/assets/icons/home.png">
+    <link rel="stylesheet" href="./css/index.css">
+    <link rel="icon" href="./assets/icons/home.png">
 </head>
 
 <body>
@@ -19,9 +19,9 @@
         </div>
         <div class="connections">
             <ul>
-                <li><a href="https://github.com/cl-davii" target="_blank"><img src="/assets/icons/github.png"> </a></li>
-                <li><a href="https://www.linkedin.com/in/cl-davii/" target="_blank"><img src="/assets/icons/linkedin.png"></a></li>
-                <li><a href="mailto:davifsc03@gmail.com" target="_blank"><img src="/assets/icons/mail.png"></a></li>
+                <li><a href="https://github.com/cl-davii" target="_blank"><img src="./assets/icons/github.png"> </a></li>
+                <li><a href="https://www.linkedin.com/in/cl-davii/" target="_blank"><img src="./assets/icons/linkedin.png"></a></li>
+                <li><a href="mailto:davifsc03@gmail.com" target="_blank"><img src="./assets/icons/mail.png"></a></li>
             </ul>
         </div>
     </main>
